--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@faker-js/faker": "^9.2.0",
     "bcrypt": "^5.1.1",
+    "commander": "^12.1.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
